# pyproject-runner

./: .gitignore  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: block-autosquash-commits.yaml  build-and-publish.yaml  build-and-publish.yml  edit-release.yaml  pull-request-checks.yaml
shim/: LICENSE.txt  README.md  hatch_build.py  pyproject.toml  rr.py
src/pyproject_runner/: __main__.py  _project.py  _tasks.py  environment.py
src/rye_runner/: __init__.py
src/uv_runner/: __init__.py  __main__.py  _project.py  _scripts.py  environment.py
tests/: test_environment.py  test_project.py
