[project]
name = "pyproject-runner-shim"
dynamic = ["readme", "version"]
description = "Shim for pyproject-runner."
requires-python = ">=3.10"
dependencies = []
license.file = "LICENSE.txt"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
rr = "rr:main"  # short for runner-run or run-runner

[project.urls]
homepage = "https://github.com/avantus-tech/pyproject-runner"
documentation = "https://github.com/avantus-tech/pyproject-runner/blob/main/shim/README.md"
repository = "https://github.com/avantus-tech/pyproject-runner"
changelog = "https://github.com/avantus-tech/pyproject-runner/releases"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["rr.py"]

# Temporary fix for https://github.com/astral-sh/uv/issues/7533
[tool.hatch.metadata.hooks.custom]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    {path = "README.md"},
]
substitutions = [
    {pattern = '\(LICENSE.txt\)', replacement = '(https://github.com/avantus-tech/pyproject-runner/blob/main/shim/LICENSE.txt)'},
    {pattern = '\(../README.md\)', replacement = '(/project/pyproject-runner/)'},
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.dev0+local"
raw-options = {root = ".."}
